QtGui/gen_qevent.h

typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QFile QFile;
typedef struct QFileOpenEvent QFileOpenEvent;
typedef struct QHelpEvent QHelpEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QMimeData QMimeData;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointingDevice QPointingDevice;
typedef struct QShortcutEvent QShortcutEvent;
typedef struct QStatusTipEvent QStatusTipEvent;
typedef struct QToolBarChangeEvent QToolBarChangeEvent;
typedef struct QTouchEvent QTouchEvent;
typedef struct QUrl QUrl;
typedef struct QWhatsThisClickedEvent QWhatsThisClickedEvent;
typedef struct QWindowStateChangeEvent QWindowStateChangeEvent;
bool QDragMoveEvent_override_virtual_clone(void* self, intptr_t slot);
QDragMoveEvent* QDragMoveEvent_virtualbase_clone(const void* self);
bool QDragMoveEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QDragMoveEvent_virtualbase_setAccepted(void* self, bool accepted);
void QDragMoveEvent_delete(QDragMoveEvent* self);
QDragEnterEvent* QDragEnterEvent_new(QPoint* pos, int actions, QMimeData* data, int buttons, int modifiers);
QDragEnterEvent* QDragEnterEvent_clone(const QDragEnterEvent* self);
bool QDragEnterEvent_override_virtual_clone(void* self, intptr_t slot);
QDragEnterEvent* QDragEnterEvent_virtualbase_clone(const void* self);
bool QDragEnterEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QDragEnterEvent_virtualbase_setAccepted(void* self, bool accepted);
void QDragEnterEvent_delete(QDragEnterEvent* self);
QDragLeaveEvent* QDragLeaveEvent_new();
QDragLeaveEvent* QDragLeaveEvent_clone(const QDragLeaveEvent* self);
bool QDragLeaveEvent_override_virtual_clone(void* self, intptr_t slot);
QDragLeaveEvent* QDragLeaveEvent_virtualbase_clone(const void* self);
bool QDragLeaveEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QDragLeaveEvent_virtualbase_setAccepted(void* self, bool accepted);
void QDragLeaveEvent_delete(QDragLeaveEvent* self);
QHelpEvent* QHelpEvent_new(int type, QPoint* pos, QPoint* globalPos);
QHelpEvent* QHelpEvent_clone(const QHelpEvent* self);
int QHelpEvent_x(const QHelpEvent* self);
int QHelpEvent_y(const QHelpEvent* self);
int QHelpEvent_globalX(const QHelpEvent* self);
int QHelpEvent_globalY(const QHelpEvent* self);
QPoint* QHelpEvent_pos(const QHelpEvent* self);
QPoint* QHelpEvent_globalPos(const QHelpEvent* self);
bool QHelpEvent_override_virtual_clone(void* self, intptr_t slot);
QHelpEvent* QHelpEvent_virtualbase_clone(const void* self);
bool QHelpEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QHelpEvent_virtualbase_setAccepted(void* self, bool accepted);
void QHelpEvent_delete(QHelpEvent* self);
QStatusTipEvent* QStatusTipEvent_new(struct miqt_string tip);
QStatusTipEvent* QStatusTipEvent_clone(const QStatusTipEvent* self);
struct miqt_string QStatusTipEvent_tip(const QStatusTipEvent* self);
bool QStatusTipEvent_override_virtual_clone(void* self, intptr_t slot);
QStatusTipEvent* QStatusTipEvent_virtualbase_clone(const void* self);
bool QStatusTipEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QStatusTipEvent_virtualbase_setAccepted(void* self, bool accepted);
void QStatusTipEvent_delete(QStatusTipEvent* self);
QWhatsThisClickedEvent* QWhatsThisClickedEvent_new(struct miqt_string href);
QWhatsThisClickedEvent* QWhatsThisClickedEvent_clone(const QWhatsThisClickedEvent* self);
struct miqt_string QWhatsThisClickedEvent_href(const QWhatsThisClickedEvent* self);
bool QWhatsThisClickedEvent_override_virtual_clone(void* self, intptr_t slot);
QWhatsThisClickedEvent* QWhatsThisClickedEvent_virtualbase_clone(const void* self);
bool QWhatsThisClickedEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QWhatsThisClickedEvent_virtualbase_setAccepted(void* self, bool accepted);
void QWhatsThisClickedEvent_delete(QWhatsThisClickedEvent* self);
QActionEvent* QActionEvent_new(int type, QAction* action);
QActionEvent* QActionEvent_new2(int type, QAction* action, QAction* before);
QActionEvent* QActionEvent_clone(const QActionEvent* self);
QAction* QActionEvent_action(const QActionEvent* self);
QAction* QActionEvent_before(const QActionEvent* self);
bool QActionEvent_override_virtual_clone(void* self, intptr_t slot);
QActionEvent* QActionEvent_virtualbase_clone(const void* self);
bool QActionEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QActionEvent_virtualbase_setAccepted(void* self, bool accepted);
void QActionEvent_delete(QActionEvent* self);
QFileOpenEvent* QFileOpenEvent_new(struct miqt_string file);
QFileOpenEvent* QFileOpenEvent_new2(QUrl* url);
QFileOpenEvent* QFileOpenEvent_clone(const QFileOpenEvent* self);
struct miqt_string QFileOpenEvent_file(const QFileOpenEvent* self);
QUrl* QFileOpenEvent_url(const QFileOpenEvent* self);
bool QFileOpenEvent_openFile(const QFileOpenEvent* self, QFile* file, int flags);
bool QFileOpenEvent_override_virtual_clone(void* self, intptr_t slot);
QFileOpenEvent* QFileOpenEvent_virtualbase_clone(const void* self);
bool QFileOpenEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QFileOpenEvent_virtualbase_setAccepted(void* self, bool accepted);
void QFileOpenEvent_delete(QFileOpenEvent* self);
QToolBarChangeEvent* QToolBarChangeEvent_new(bool t);
QToolBarChangeEvent* QToolBarChangeEvent_clone(const QToolBarChangeEvent* self);
bool QToolBarChangeEvent_toggle(const QToolBarChangeEvent* self);
bool QToolBarChangeEvent_override_virtual_clone(void* self, intptr_t slot);
QToolBarChangeEvent* QToolBarChangeEvent_virtualbase_clone(const void* self);
bool QToolBarChangeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QToolBarChangeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QToolBarChangeEvent_delete(QToolBarChangeEvent* self);
QShortcutEvent* QShortcutEvent_new(QKeySequence* key, int id);
QShortcutEvent* QShortcutEvent_new2(QKeySequence* key, int id, bool ambiguous);
QShortcutEvent* QShortcutEvent_clone(const QShortcutEvent* self);
QKeySequence* QShortcutEvent_key(const QShortcutEvent* self);
int QShortcutEvent_shortcutId(const QShortcutEvent* self);
bool QShortcutEvent_isAmbiguous(const QShortcutEvent* self);
bool QShortcutEvent_override_virtual_clone(void* self, intptr_t slot);
QShortcutEvent* QShortcutEvent_virtualbase_clone(const void* self);
bool QShortcutEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QShortcutEvent_virtualbase_setAccepted(void* self, bool accepted);
void QShortcutEvent_delete(QShortcutEvent* self);
QWindowStateChangeEvent* QWindowStateChangeEvent_new(int oldState);
QWindowStateChangeEvent* QWindowStateChangeEvent_new2(int oldState, bool isOverride);
QWindowStateChangeEvent* QWindowStateChangeEvent_clone(const QWindowStateChangeEvent* self);
int QWindowStateChangeEvent_oldState(const QWindowStateChangeEvent* self);
bool QWindowStateChangeEvent_isOverride(const QWindowStateChangeEvent* self);
bool QWindowStateChangeEvent_override_virtual_clone(void* self, intptr_t slot);
QWindowStateChangeEvent* QWindowStateChangeEvent_virtualbase_clone(const void* self);
bool QWindowStateChangeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QWindowStateChangeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QWindowStateChangeEvent_delete(QWindowStateChangeEvent* self);
QTouchEvent* QTouchEvent_new(int eventType);
QTouchEvent* QTouchEvent_new2(int eventType, QPointingDevice* device, int modifiers, uint8_t touchPointStates);
QTouchEvent* QTouchEvent_new3(int eventType, QPointingDevice* device);
QTouchEvent* QTouchEvent_new4(int eventType, QPointingDevice* device, int modifiers);
QTouchEvent* QTouchEvent_new5(int eventType, QPointingDevice* device, int modifiers, struct miqt_array /* of QEventPoint* */  touchPoints);
QTouchEvent* QTouchEvent_new6(int eventType, QPointingDevice* device, int modifiers, uint8_t touchPointStates, struct miqt_array /* of QEventPoint* */  touchPoints);
QTouchEvent* QTouchEvent_clone(const QTouchEvent* self);
QObject* QTouchEvent_target(const QTouchEvent* self);