qt6/gen_qevent.nim

proc fQDragMoveEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QDragMoveEvent_virtualbase_clone".}
proc fcQDragMoveEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QDragMoveEvent_override_virtual_clone".}
proc fQDragMoveEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QDragMoveEvent_virtualbase_setAccepted".}
proc fcQDragMoveEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QDragMoveEvent_override_virtual_setAccepted".}
proc fcQDragMoveEvent_delete(self: pointer) {.importc: "QDragMoveEvent_delete".}
proc fcQDragEnterEvent_new(pos: pointer, actions: cint, data: pointer, buttons: cint, modifiers: cint): ptr cQDragEnterEvent {.importc: "QDragEnterEvent_new".}
proc fcQDragEnterEvent_clone(self: pointer, ): pointer {.importc: "QDragEnterEvent_clone".}
proc fQDragEnterEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QDragEnterEvent_virtualbase_clone".}
proc fcQDragEnterEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QDragEnterEvent_override_virtual_clone".}
proc fQDragEnterEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QDragEnterEvent_virtualbase_setAccepted".}
proc fcQDragEnterEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QDragEnterEvent_override_virtual_setAccepted".}
proc fcQDragEnterEvent_delete(self: pointer) {.importc: "QDragEnterEvent_delete".}
proc fcQDragLeaveEvent_new(): ptr cQDragLeaveEvent {.importc: "QDragLeaveEvent_new".}
proc fcQDragLeaveEvent_clone(self: pointer, ): pointer {.importc: "QDragLeaveEvent_clone".}
proc fQDragLeaveEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QDragLeaveEvent_virtualbase_clone".}
proc fcQDragLeaveEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QDragLeaveEvent_override_virtual_clone".}
proc fQDragLeaveEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QDragLeaveEvent_virtualbase_setAccepted".}
proc fcQDragLeaveEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QDragLeaveEvent_override_virtual_setAccepted".}
proc fcQDragLeaveEvent_delete(self: pointer) {.importc: "QDragLeaveEvent_delete".}
proc fcQHelpEvent_new(typeVal: cint, pos: pointer, globalPos: pointer): ptr cQHelpEvent {.importc: "QHelpEvent_new".}
proc fcQHelpEvent_clone(self: pointer, ): pointer {.importc: "QHelpEvent_clone".}
proc fcQHelpEvent_x(self: pointer, ): cint {.importc: "QHelpEvent_x".}
proc fcQHelpEvent_y(self: pointer, ): cint {.importc: "QHelpEvent_y".}
proc fcQHelpEvent_globalX(self: pointer, ): cint {.importc: "QHelpEvent_globalX".}
proc fcQHelpEvent_globalY(self: pointer, ): cint {.importc: "QHelpEvent_globalY".}
proc fcQHelpEvent_pos(self: pointer, ): pointer {.importc: "QHelpEvent_pos".}
proc fcQHelpEvent_globalPos(self: pointer, ): pointer {.importc: "QHelpEvent_globalPos".}
proc fQHelpEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QHelpEvent_virtualbase_clone".}
proc fcQHelpEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QHelpEvent_override_virtual_clone".}
proc fQHelpEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QHelpEvent_virtualbase_setAccepted".}
proc fcQHelpEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QHelpEvent_override_virtual_setAccepted".}
proc fcQHelpEvent_delete(self: pointer) {.importc: "QHelpEvent_delete".}
proc fcQStatusTipEvent_new(tip: struct_miqt_string): ptr cQStatusTipEvent {.importc: "QStatusTipEvent_new".}
proc fcQStatusTipEvent_clone(self: pointer, ): pointer {.importc: "QStatusTipEvent_clone".}
proc fcQStatusTipEvent_tip(self: pointer, ): struct_miqt_string {.importc: "QStatusTipEvent_tip".}
proc fQStatusTipEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QStatusTipEvent_virtualbase_clone".}
proc fcQStatusTipEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QStatusTipEvent_override_virtual_clone".}
proc fQStatusTipEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QStatusTipEvent_virtualbase_setAccepted".}
proc fcQStatusTipEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QStatusTipEvent_override_virtual_setAccepted".}
proc fcQStatusTipEvent_delete(self: pointer) {.importc: "QStatusTipEvent_delete".}
proc fcQWhatsThisClickedEvent_new(href: struct_miqt_string): ptr cQWhatsThisClickedEvent {.importc: "QWhatsThisClickedEvent_new".}
proc fcQWhatsThisClickedEvent_clone(self: pointer, ): pointer {.importc: "QWhatsThisClickedEvent_clone".}
proc fcQWhatsThisClickedEvent_href(self: pointer, ): struct_miqt_string {.importc: "QWhatsThisClickedEvent_href".}
proc fQWhatsThisClickedEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QWhatsThisClickedEvent_virtualbase_clone".}
proc fcQWhatsThisClickedEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QWhatsThisClickedEvent_override_virtual_clone".}
proc fQWhatsThisClickedEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QWhatsThisClickedEvent_virtualbase_setAccepted".}
proc fcQWhatsThisClickedEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QWhatsThisClickedEvent_override_virtual_setAccepted".}
proc fcQWhatsThisClickedEvent_delete(self: pointer) {.importc: "QWhatsThisClickedEvent_delete".}
proc fcQActionEvent_new(typeVal: cint, action: pointer): ptr cQActionEvent {.importc: "QActionEvent_new".}
proc fcQActionEvent_new2(typeVal: cint, action: pointer, before: pointer): ptr cQActionEvent {.importc: "QActionEvent_new2".}
proc fcQActionEvent_clone(self: pointer, ): pointer {.importc: "QActionEvent_clone".}
proc fcQActionEvent_action(self: pointer, ): pointer {.importc: "QActionEvent_action".}
proc fcQActionEvent_before(self: pointer, ): pointer {.importc: "QActionEvent_before".}
proc fQActionEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QActionEvent_virtualbase_clone".}
proc fcQActionEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QActionEvent_override_virtual_clone".}
proc fQActionEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QActionEvent_virtualbase_setAccepted".}
proc fcQActionEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QActionEvent_override_virtual_setAccepted".}
proc fcQActionEvent_delete(self: pointer) {.importc: "QActionEvent_delete".}
proc fcQFileOpenEvent_new(file: struct_miqt_string): ptr cQFileOpenEvent {.importc: "QFileOpenEvent_new".}
proc fcQFileOpenEvent_new2(url: pointer): ptr cQFileOpenEvent {.importc: "QFileOpenEvent_new2".}
proc fcQFileOpenEvent_clone(self: pointer, ): pointer {.importc: "QFileOpenEvent_clone".}
proc fcQFileOpenEvent_file(self: pointer, ): struct_miqt_string {.importc: "QFileOpenEvent_file".}
proc fcQFileOpenEvent_url(self: pointer, ): pointer {.importc: "QFileOpenEvent_url".}
proc fcQFileOpenEvent_openFile(self: pointer, file: pointer, flags: cint): bool {.importc: "QFileOpenEvent_openFile".}
proc fQFileOpenEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QFileOpenEvent_virtualbase_clone".}
proc fcQFileOpenEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QFileOpenEvent_override_virtual_clone".}
proc fQFileOpenEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QFileOpenEvent_virtualbase_setAccepted".}
proc fcQFileOpenEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QFileOpenEvent_override_virtual_setAccepted".}
proc fcQFileOpenEvent_delete(self: pointer) {.importc: "QFileOpenEvent_delete".}
proc fcQToolBarChangeEvent_new(t: bool): ptr cQToolBarChangeEvent {.importc: "QToolBarChangeEvent_new".}
proc fcQToolBarChangeEvent_clone(self: pointer, ): pointer {.importc: "QToolBarChangeEvent_clone".}
proc fcQToolBarChangeEvent_toggle(self: pointer, ): bool {.importc: "QToolBarChangeEvent_toggle".}
proc fQToolBarChangeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QToolBarChangeEvent_virtualbase_clone".}
proc fcQToolBarChangeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QToolBarChangeEvent_override_virtual_clone".}
proc fQToolBarChangeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QToolBarChangeEvent_virtualbase_setAccepted".}
proc fcQToolBarChangeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QToolBarChangeEvent_override_virtual_setAccepted".}
proc fcQToolBarChangeEvent_delete(self: pointer) {.importc: "QToolBarChangeEvent_delete".}
proc fcQShortcutEvent_new(key: pointer, id: cint): ptr cQShortcutEvent {.importc: "QShortcutEvent_new".}
proc fcQShortcutEvent_new2(key: pointer, id: cint, ambiguous: bool): ptr cQShortcutEvent {.importc: "QShortcutEvent_new2".}
proc fcQShortcutEvent_clone(self: pointer, ): pointer {.importc: "QShortcutEvent_clone".}
proc fcQShortcutEvent_key(self: pointer, ): pointer {.importc: "QShortcutEvent_key".}
proc fcQShortcutEvent_shortcutId(self: pointer, ): cint {.importc: "QShortcutEvent_shortcutId".}
proc fcQShortcutEvent_isAmbiguous(self: pointer, ): bool {.importc: "QShortcutEvent_isAmbiguous".}
proc fQShortcutEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QShortcutEvent_virtualbase_clone".}
proc fcQShortcutEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QShortcutEvent_override_virtual_clone".}
proc fQShortcutEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QShortcutEvent_virtualbase_setAccepted".}
proc fcQShortcutEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QShortcutEvent_override_virtual_setAccepted".}
proc fcQShortcutEvent_delete(self: pointer) {.importc: "QShortcutEvent_delete".}
proc fcQWindowStateChangeEvent_new(oldState: cint): ptr cQWindowStateChangeEvent {.importc: "QWindowStateChangeEvent_new".}
proc fcQWindowStateChangeEvent_new2(oldState: cint, isOverride: bool): ptr cQWindowStateChangeEvent {.importc: "QWindowStateChangeEvent_new2".}
proc fcQWindowStateChangeEvent_clone(self: pointer, ): pointer {.importc: "QWindowStateChangeEvent_clone".}
proc fcQWindowStateChangeEvent_oldState(self: pointer, ): cint {.importc: "QWindowStateChangeEvent_oldState".}
proc fcQWindowStateChangeEvent_isOverride(self: pointer, ): bool {.importc: "QWindowStateChangeEvent_isOverride".}
proc fQWindowStateChangeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QWindowStateChangeEvent_virtualbase_clone".}
proc fcQWindowStateChangeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QWindowStateChangeEvent_override_virtual_clone".}
proc fQWindowStateChangeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QWindowStateChangeEvent_virtualbase_setAccepted".}
proc fcQWindowStateChangeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QWindowStateChangeEvent_override_virtual_setAccepted".}
proc fcQWindowStateChangeEvent_delete(self: pointer) {.importc: "QWindowStateChangeEvent_delete".}
proc fcQTouchEvent_new(eventType: cint): ptr cQTouchEvent {.importc: "QTouchEvent_new".}
proc fcQTouchEvent_new2(eventType: cint, device: pointer, modifiers: cint, touchPointStates: cint): ptr cQTouchEvent {.importc: "QTouchEvent_new2".}
proc fcQTouchEvent_new3(eventType: cint, device: pointer): ptr cQTouchEvent {.importc: "QTouchEvent_new3".}
proc fcQTouchEvent_new4(eventType: cint, device: pointer, modifiers: cint): ptr cQTouchEvent {.importc: "QTouchEvent_new4".}
proc fcQTouchEvent_new5(eventType: cint, device: pointer, modifiers: cint, touchPoints: struct_miqt_array): ptr cQTouchEvent {.importc: "QTouchEvent_new5".}
proc fcQTouchEvent_new6(eventType: cint, device: pointer, modifiers: cint, touchPointStates: cint, touchPoints: struct_miqt_array): ptr cQTouchEvent {.importc: "QTouchEvent_new6".}
proc fcQTouchEvent_clone(self: pointer, ): pointer {.importc: "QTouchEvent_clone".}
proc fcQTouchEvent_target(self: pointer, ): pointer {.importc: "QTouchEvent_target".}
